# SmartStorage

./: .gitignore  CMakeLists.txt  appstyle.h  main.cpp  mainwindow.cpp  mainwindow.h  splashscreen.cpp  splashscreen.h
models/: activitylog.h  employee.h  product.h  warehousecell.h
pages/: dashboardpage.cpp  dashboardpage.h  employeespage.cpp  employeespage.h  itemcardpage.cpp  itemcardpage.h  itemspage.cpp  itemspage.h  settingspage.cpp  settingspage.h  warehousemappage.cpp  warehousemappage.h
